<resources>
    <string name="app_name">ProjetIF26-DrouotRenard</string>
    <string name="maint_tv">Fromagerie Application</string>
    <string name="main_btn_1">Utiliser</string>
    <string name="main_btn_2">Stocker</string>
    <string name="main_btn_3">Paramétrer</string>
    <string name="main_btn_4">Traçabilité</string>
    <string name="utiliserView_creer">Créer</string>
    <string name="utiliserView_editText">Nom de la feuille</string>
    <string name="tracabiliteView_textLabel">Tracabilité</string>
    <string name="tracabiliteView_editText">Numero de serie</string>
    <string name="tracabiliteView_btn">Chercher</string>
    <string name="parametrerView_btn_addModule">Ajouter Module</string>
    <string name="parametrerView_btn_addLigne">Ajouter Ligne</string>
    <string name="parametrerView_btn_addParam">Ajouter Parametre</string>
    <string name="VueListe">Vue Liste</string>
    <string name="parametrer2EditText">Nom du module</string>
    <string name="parametrer3View_editText_num">Numero de serie</string>
    <string name="parametrer3View_editText_obj">Objectif</string>
    <string name="parametrer3View_editText_reel">Réel</string>
    <string name="parametrer3View_btn_creer">Créer</string>
    <string name="parametrer3View_btn_ajoutparam">Ajout Parametre</string>
    <string name="Valider">Valider</string>
    <string name="parametrer4_editText_type">Type</string>
    <string name="parametrer4_btn_valider">Valider</string>
    <string name="supprimer">Supprimer</string>
    <string name="editer">editer</string>
</resources>
